# langchain-ia

./: .gitignore  README.md  package.json  pnpm-lock.yaml
backend/: agent.py  app.py  main.py  pyproject.toml  server.py
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
frontend/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  Chatbot.tsx  styles.css
frontend/src/components/: Layout.tsx  Loading.tsx  MessageBubble.tsx  MessageInput.tsx  Sidebar.tsx  States.tsx
frontend/src/examples/: registry.ts
frontend/src/examples/branching-chat/: index.tsx
frontend/src/examples/branching-chat/components/: BranchSwitcher.tsx
frontend/src/examples/custom-streaming/: index.tsx
frontend/src/examples/deepagent/: index.tsx
frontend/src/examples/deepagent-tools/: index.tsx
frontend/src/examples/human-in-the-loop/: index.tsx
frontend/src/examples/parallel-research/: index.tsx
frontend/src/examples/reasoning-agent/: index.tsx
frontend/src/examples/session-persistence/: index.tsx
frontend/src/examples/summarization-agent/: index.tsx
frontend/src/examples/tool-calling-agent/: index.tsx
frontend/src/styles/: colors.css
